--- a/services/cabinet/public/html/templates/display-manager.html
+++ b/services/cabinet/public/html/templates/display-manager.html
@@ -1,4 +1,4 @@
-<div class='display-manager' id='{{id}}'>
+<div class='display-manager' id='{{switchCntId}}'>
   <span:t repeat='item in list' class='display-manager-item'>
     <button class='display-manager-input{{$index === 0 ? " active" : ""}}'
           type='button' display-id='{{item.id}}' link='{{link}}'>{{item.name}}</button>
