--- a/services/cabinet/public/html/templates/index.html
+++ b/services/cabinet/public/html/templates/index.html
@@ -10,6 +10,8 @@
     <script type="text/javascript" src='/cabinet/js/index.js'></script>
     <link rel="stylesheet" href="/styles/expandable-list.css">
     <link rel="stylesheet" href="/cabinet/styles/estimate.css">
+    <link rel="stylesheet" href="/styles/icons.css">
+
     <script src="/js/utility-filter.js" run-type='auto'></script>
     <title>Estimate</title>
   </head>
