--- a/services/cabinet/public/html/templates/managers/template/joints/head.html
+++ b/services/cabinet/public/html/templates/managers/template/joints/head.html
@@ -1,5 +1,5 @@
 <b>
-  <input class='template-input' value='{{obj.malePartCode}}' attr='joints' placeholder='Male Part Code' name='malePartCode'>
+  <input class='template-input' value='{{obj.malePartCode()}}' attr='joints' placeholder='Male Part Code' name='malePartCode'>
   =>
-  <input class='template-input' value='{{obj.femalePartCode}}' attr='joints' placeholder='Female Part Code' name='femalePartCode'>
+  <input class='template-input' value='{{obj.femalePartCode()}}' attr='joints' placeholder='Female Part Code' name='femalePartCode'>
 </b>
