Program almost working good enough to do my bathroom

--- a/public/styles/icons.css
+++ b/public/styles/icons.css
@@ -28,6 +28,8 @@
    left: 8px
 }
 
+
+
 .gg-math-plus,
 .gg-math-plus::after {
     display: block;
@@ -50,6 +52,8 @@
     top: -7px;
     left: 7px
 }
+
+
 
 .gg-pen {
     box-sizing: border-box;
@@ -93,6 +97,7 @@
 }
 
 
+
 .gg-chevron-right {
 box-sizing: border-box;
 position: relative;
@@ -119,6 +124,7 @@ top: 4px
 }
 
 
+
 .gg-chevron-down {
 box-sizing: border-box;
 position: relative;
@@ -142,4 +148,37 @@ border-right: 2px solid;
 transform: rotate(45deg);
 left: 4px;
 top: 2px
+}
+
+
+
+.gg-ruler {
+box-sizing: border-box;
+position: relative;
+display: block;
+transform: scale(var(--ggs,1));
+width: 24px;
+height: 13px;
+border: 2px solid;
+border-radius: 3px
+}
+
+.gg-ruler::after,
+.gg-ruler::before {
+content: "";
+display: block;
+box-sizing: border-box;
+position: absolute;
+border-radius: 3px;
+width: 2px;
+height: 5px;
+background: currentColor;
+left: 7px;
+top: -1px;
+box-shadow: 8px 0 0
+}
+
+.gg-ruler::before {
+height: 7px;
+left: 3px
 } 
