--- a/services/cabinet/public/html/templates/order.html
+++ b/services/cabinet/public/html/templates/order.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script type="text/javascript" src='/cabinet/js/index.js'></script>
+    <script type="text/javascript" src='/js/qrious.js'></script>
     <link rel="stylesheet" href="/styles/expandable-list.css">
     <link rel="stylesheet" href="/styles/icons.css">
     <link rel="stylesheet" href="/cabinet/styles/estimate.css">
@@ -39,5 +40,6 @@
         </div>
       </div>
     </div>
+    <canvas id='qr-demo'></canvas>
   </body>
 </html>
