--- a/services/cabinet/public/html/templates/canvas-displays.html
+++ b/services/cabinet/public/html/templates/canvas-displays.html
@@ -5,13 +5,15 @@
       <canvas id="two-d-model-canvas"></canvas>
       <div class='orientation-controls'></div>
     </div>
-    <div name='Cabinet'></div>
-    <div name='Parts'></div>
-    <div name='Room'></div>
+    <div name='Cabinet' id='disp-canvas-cab'></div>
+    <div name='Parts 3D' id='disp-canvas-p3d'>
+      <div id='model-controller'></div>
+    </div>
+    <div name='Parts 2D' id='disp-canvas-p2d'></div>
+    <div name='Room' id='disp-canvas-room'></div>
     <div id="three-d-model" class="viewer small">
       <div class='inline left'>
         <div class='orientation-controls'></div>
-        <span id="model-controller"></span>
       </div>
     </div>
   </div>
