--- a/services/cabinet/public/html/templates/2d/pop-up/line-measurement-2d.html
+++ b/services/cabinet/public/html/templates/2d/pop-up/line-measurement-2d.html
@@ -4,7 +4,7 @@
     <label>{{property.name()}}</label>
     <input class='transparent' type='radio' name='UNIT2'
           prop-radio-update='{{property.id()}}' value="{{property.name()}}"
-          {{property.value() === true ? 'checked' : ''}}>
+          {{property.value() === true ? 'checked' : ''}}  is-raw>
   </span:t>
   <br>
   <input type='text' class='measurement-mod transparent' value='{{target.display()}}'>
