--- a/services/cabinet/public/html/templates/order.html
+++ b/services/cabinet/public/html/templates/order.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src='/cabinet/js/index.js'></script>
     <script type="text/javascript" src='/js/qrious.js'></script>
     <link rel="stylesheet" href="/styles/expandable-list.css">
+    <link rel="stylesheet" href="/styles/file-tab.css">
     <link rel="stylesheet" href="/styles/icons.css">
     <link rel="stylesheet" href="/cabinet/styles/estimate.css">
     <script src="/js/utility-filter.js" run-type='auto'></script>
