--- a/public/html/templates/expandable/list.html
+++ b/public/html/templates/expandable/list.html
@@ -12,5 +12,7 @@
     </div>
   </div:t>
   <div class='expand-input-cnt' hidden has-input-tree='{{hasInputTree()}}'>{{inputHtml()}}</div>
-  <div class='input-open-cnt'><button>Add {{listElemLable()}}</button></div>
+  <div class='input-open-cnt'>
+    <button {{hideAddBtn ? 'hidden' : ''}}>Add {{listElemLable()}}</button>
+  </div>
 </div>
