--- a/public/html/templates/expandable/pill.html
+++ b/public/html/templates/expandable/pill.html
@@ -11,7 +11,9 @@
         </div>
       </div>
     </div:t>
-    <div class='input-open-cnt'><button>Add {{listElemLable()}}</button></div>
+    <div class='input-open-cnt'>
+      <button {{hideAddBtn ? 'hidden' : ''}}>Add {{listElemLable()}}</button>
+    </div>
   </div>
   <div>
     <div class='expand-input-cnt' hidden>{{inputHtml()}}</div>
