--- a/services/cabinet/public/html/templates/cabinet/body.html
+++ b/services/cabinet/public/html/templates/cabinet/body.html
@@ -1,13 +1,13 @@
 <div>
-  <div class='center'>
-    <div class='left'>
+  <div class='center relitive'>
+    <div class='absolute-top-left'>
       <label>Show Left</label>
       <select class="show-left-select">
         <option:t repeat='showType in showTypes'>{{showType.name}}</option:t>
       </select>
     </div>
-    <div class='property-id-container center inline-flex'>{{selectHtml}}</div>
-    <div class='right'>
+    {{fileTabDisp.html()}}
+    <div class='absolute-top-right'>
       <select class="show-right-select">
         <option:t repeat='showType in showTypes'>{{showType.name}}</option:t>
       </select>
@@ -21,10 +21,7 @@
       <input type='text' value='{{display(obj.value)}}' class='modifiable-value-input'>
     </span:t>
   </div>
-  <div class='center'>
+  <div class='center' hidden>
     <button class='save-cabinet-btn' index='{{$index}}'>Save</button>
   </div>
-  <div:t repeat='opening in cabinet.openings' class='divison-section-cnt' index='{{$index}}'>
-    {{OpenSectionDisplay.html(opening.sectionProperties())}}
-  </div:t>
 </div>
