dividers working but joints with other generated dividers is not, has to do with generic divider part codes

--- a/services/cabinet/public/html/templates/2d/pop-up/layout-2d.html
+++ b/services/cabinet/public/html/templates/2d/pop-up/layout-2d.html
@@ -10,7 +10,7 @@
   <input class='value-2d' type="text" key="ceilingHeight" convert='false' value="{{display(target.ceilingHeight())}}">
   <br>
   <div class='center-vert center'>
-    <button class='layout ruler{{hoverMap.measurements.enabled() ? ' active' : ''}}'>
+    <button class='layout ruler{{panZ.measurements.enabled() ? ' active' : ''}}'>
       <i class="gg-ruler"></i>
     </button>
   </div>
