--- a/services/cabinet/public/html/templates/advanced/subassemblies/void.html
+++ b/services/cabinet/public/html/templates/advanced/subassemblies/void.html
@@ -1,4 +1,4 @@
-<div class='void-display-cnt' cabinet-id='{{cabinetId()}}'>
+<div class='void-display-cnt' void-id='{{id()}}' cabinet-id='{{cabinetId()}}'>
   <label>Horizontal</label>
   <input type='radio' name='orientation' value='horizontal' checked>
   <label>Vertical</label>
