Voids working fairly well, drawer box depth working fairly well, a handful of bugs fixed

--- a/public/html/templates/lists/file-tab.html
+++ b/public/html/templates/lists/file-tab.html
@@ -1,4 +1,4 @@
-<div class='file-tab-cnt {{type()}}' id='{{id()}}'>
+<div class='file-tab-cnt {{type()}}{{isOpen() ? ' open' : ''}}' id='{{id()}}'>
   <ul>
     <li:t repeat='title in list()' {{title === selected() ? 'class="selected"' : ''}}>
       {{title}}
