--- a/services/cabinet/public/html/templates/2d/pop-up/layout-2d.html
+++ b/services/cabinet/public/html/templates/2d/pop-up/layout-2d.html
@@ -4,7 +4,7 @@
   <button class='add-object-btn-2d transparent'>Add Object</button>
   <br>
   <label>Adjust Layout</label>
-  <input class='value-2d' hover-map type="checkbox" key="layoutHover" convert='false' {{hoverMap.layoutHover() ? 'checked' : ''}}>
+  <input class='value-2d' member='hover-map' type="checkbox" key="layoutHover" convert='false' {{hoverMap.layoutHover() ? 'checked' : ''}}>
   <br>
   <label>Ceiling Height</label>
   <input class='value-2d' type="text" key="ceilingHeight" convert='false' value="{{display(target.ceilingHeight())}}">
