--- a/services/cabinet/public/html/templates/model-controller.html
+++ b/services/cabinet/public/html/templates/model-controller.html
@@ -1,34 +1,20 @@
 <div class='{{group.level < 2 ? '' : 'model-selector indent'}}'
               {{group.level < 2 ? '' : 'hidden'}}>
-  <div class='model-state {{tdm.isTarget("prefix", group.prefix) ? "active " : ""}}
-              {{label ? "prefix-switch" : ""}}'>
+  <div  prefix='{{group.prefix}}'
+          class='model-state{{label ? " prefix-switch" : ""}}'>
     <label type='prefix'>{{label}}</label>
-    <input type='checkbox' class='prefix-checkbox' prefix='{{group.prefix}}'
-        {{!tdm.hidePrefix(label) ? 'checked' : ''}}
+    <input type='checkbox' class='part-code-checkbox' part-code='{{group.prefix}}'
+        {{!tdm.hidePrefix(group.prefix) ? 'checked' : ''}}
         {{group.level === 0 ? 'hidden' : ''}}>
     <div class='model-container'>
-      <div:t class='model-state {{group.level < 1 ? '' : 'model-label indent'}}
-                    {{tdm.isTarget("part-name", partName) ? " active" : ""}}'
-              repeat='partName, partList in group.parts'
-              {{group.level < 1 ? '' : 'hidden'}}
-              {{partList.length === 1 ? 'target part-code="' + partList[0].partCode() + '"' : ''}}>
-        <label type='part-name' part-name='{{partName}}'>
-            {{partName}}{{partList.length === 1 ? '(' + partList[0].partCode() + ')' : ''}}
+      <div:t class='model-state {{group.level < 1 ? '' : 'model-label indent'}}'
+              repeat='partCode, part in group.parts'
+              prefix='{{part.partCode(true)}}'>
+        <label type='part-name' part-code='{{partCode}}'>
+            {{partCode}}
         </label>
-        <input type='checkbox' class='part-name-checkbox' part-name='{{partName}}'
-            {{!tdm.hidePartName(partName) ? 'checked' : ''}}>
-        <div class='indent'>
-          <div:t part-id='{{part.id()}}' part-code='{{part.partCode()}}'
-                  class='model-state {{tdm.isTarget("part-id", part.id()) ? "active " : ""}}'
-                  repeat='part in partList'
-                  {{partList.length === 1 ? 'hidden' : ''}}>
-            <label type='part-id' target part-code='{{part.partCode()}}'>
-              {{part.partCode()}}-{{$index + 1}}
-            </label>
-            <input type='checkbox' class='part-id-checkbox' part-id='{{part.id()}}' part-code='{{part.partCode()}}'
-                {{!tdm.hidePartId(part.id()) ? 'checked' : ''}}>
-          </div:t>
-        </div>
+        <input type='checkbox' class='part-code-checkbox' part-code='{{part.partCode(true)}}'
+                {{!tdm.hidePrefix(part.partCode(true)) ? 'checked' : ''}}>
       </div:t>
     </div>
     <div:t repeat='label, group in group.groups' $t-id='model-controller'></div:t>
