--- a/public/html/templates/expandable/sidebar.html
+++ b/public/html/templates/expandable/sidebar.html
@@ -19,7 +19,7 @@
   </div>
   <div>
   </div>
-  <div class="expand-body {{type()}}" ex-list-id='{{id()}}' key='{{key}}'>
-    Hello World!
+  <div class="expand-body {{type()}}" ex-list-id='{{id()}}' key='{{activeKey()}}'>
+    {{getBody(active())}}
   </div>
 </div>
