--- a/services/cabinet/public/html/templates/group/body.html
+++ b/services/cabinet/public/html/templates/group/body.html
@@ -1,4 +1,4 @@
-<div class='group-cnt'>
+<div class='group-cnt tab'>
   <div class='group-header' cab-style='Inset'
       {{group.propertyConfig.isInset() ? '' : 'hidden'}}>
     <h2>Inset <b class='group-key'>{{group.propertyConfig('Inset').__KEY}}</b></h2>
@@ -12,5 +12,5 @@
     <h2>Reveal <b class='group-key'>{{group.propertyConfig('Reveal').__KEY}}</b></h2>
   </div>
   {{propertyHtml()}}
-  <div class='cabinet-cnt' group-id='{{group.id()}}'></div>
+  <div class='cabinet-cnt' group-id='{{group.id()}}'>{{groupDisplay.cabinetHtml(group)}}</div>
 </div>
