--- a/services/cabinet/public/html/templates/managers/template/subassemblies/body.html
+++ b/services/cabinet/public/html/templates/managers/template/subassemblies/body.html
@@ -54,6 +54,25 @@
     <input disabled class='measurement-input' name='value'>
   </div>
   <div>
+    <label>Normal Vectors:</label>
+    <div class='tab'>
+      <label>Cross Grain</label>
+      <input type="number" min='0' max='1' name="" value="1">
+      <input type="number" min='0' max='1' name="" value="0">
+      <input type="number" min='0' max='1' name="" value="0">
+      <br>
+      <label>With Grain</label>
+      <input type="number" min='0' max='1' name="" value="0">
+      <input type="number" min='0' max='1' name="" value="1">
+      <input type="number" min='0' max='1' name="" value="0">
+      <br>
+      <label>End Grain</label>
+      <input type="number" min='0' max='1' name="" value="0">
+      <input type="number" min='0' max='1' name="" value="0">
+      <input type="number" min='0' max='1' name="" value="1">
+    </div>
+  </div>
+  <div>
     {{typeSpecificHtml}}
   </div>
 </div>
