--- a/services/cabinet/public/html/templates/three-view.html
+++ b/services/cabinet/public/html/templates/three-view.html
@@ -6,22 +6,31 @@
     </div>
   </div>
   <div class='three-view-two-d-cnt'>
-    <div class='three-view-canvases-cnt inline-flex' id='{{id()}}-cnt'>
-      <div class='part-input-cnt center-vert'>
-        <input type="text" name="partSelector" list='part-list'>
-        <datalist id='part-list'></datalist>
-        <br>
-        <div class='center-vert'>Part Code: <b id='three-view-part-code-{{id()}}'></b></div>
-        <button class='ruler'>
-          <i class="gg-ruler"></i>
-        </button>
-      </div>
+    <div class='three-view-canvases-cnt' id='{{id()}}-cnt'>
+      <div class='inline-flex'>
+        <div class='part-input-cnt center-vert'>
+          <label>Side:</label>
+          <label>Right</label>
+          <input type="radio" name="side" value="right" {{side() === 'right' ? 'checked' : ''}}>
+          <label>Left</label>
+          <input type="radio" name="side" value="left" {{side() === 'left' ? 'checked' : ''}}>
+          <br>
+          <input type="text" name="partSelector" list='part-list'>
+          <datalist id='part-list'></datalist>
+          <br>
+          <div class='center-vert'>Part Code: <b id='three-view-part-code-{{id()}}'></b></div>
+          <button class='ruler'>
+            <i class="gg-ruler"></i>
+          </button>
+        </div>
 
-      <span class='three-view-canvas-cnt'>
-        <b>Three View Drawing</b>
-        <button class='three-view-draw-string-btn'>Copy Draw String</button>
-        <canvas id="three-view" width="{{maxDem()}}" height="{{maxDem()}}"></canvas>
-      </span>
+        <span class='three-view-canvas-cnt'>
+          <b>Three View Drawing</b>
+          <button class='three-view-draw-string-btn'>Copy Draw String</button>
+          <canvas id="three-view" width="{{maxDem()}}" height="{{maxDem()}}"></canvas>
+        </span>
+      </div>
+      <div class='part-info-cnt'>P INF CNT</div>
     </div>
   </div>
 </div>
