--- a/public/html/templates/expandable/top-add-list.html
+++ b/public/html/templates/expandable/top-add-list.html
@@ -10,7 +10,7 @@
       </div>
       <div class="expand-body {{type()}}"  ex-list-id='{{id()}}' key='{{key}}'
           {{active() === item ? '' : 'hidden'}}>
-        {{getBody && getBody(item, key)}}
+        {{active() === item && getBody && getBody(item, key)}}
       </div>
     </div>
   </div:t>
