--- a/services/cabinet/public/html/templates/documents/part.html
+++ b/services/cabinet/public/html/templates/documents/part.html
@@ -1,9 +1,20 @@
-<div class='font-medium part-cnt'>
-  {{info.parts.length}}) {{disp.demensions(info.dems)}} {{disp.partCodes(info.parts)}}
-  <br>
+<h2>{{info.parts().length}}) {{disp.demensions(info.demensions())}}</h2>
+{{disp.partIds(info.parts())}}
+<div class='font-medium part-cnt' {{info.cutInfo().length === 0 ? 'hidden' : ''}}>
+  <span>
+    <table>
+      <caption>Table Saw</caption>
+      <th>Width</th>
+      <th>Side&nbsp;Up</th>
+      <th>Edge</th>
+      <th>Fence&nbsp;@</th>
+      <th>Length</th>
+      <th>OOB</th>
+      <tr:t class='cut-info-cnt tab font-medium' repeat='cutInfo in info.cutInfo()'>
+        {{cutInfo.toString()}}
+      </tr:t>
+    </table>
+  </span>
   <span class='tab' id='{{viewContainer(info.views.left)}}'></span>
   <span class='tab' id='{{viewContainer(info.views.right)}}'></span>
-  <div:t class='cut-info-cnt tab font-medium' repeat='cutInfo in info.cutList'>
-    {{cutDisplay(cutInfo)}}
-  </div:t>
 </div>
