--- a/services/cabinet/public/styles/estimate.css
+++ b/services/cabinet/public/styles/estimate.css
@@ -526,7 +526,17 @@ td[dir] {
   color: white;
 }
 
+.part-canvas {
+  width: 300px;
+  height: 150px;
+}
+
 .part-cnt {
   overflow: auto;
   max-height: 40vh;
+  display: inline-flex;
+}
+
+.part-cnt[hidden] {
+  display: none;
 }
